--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 pycrypto>=2.6.1
-git+https://github.com/mynameisfiber/secret-sharing.git
+git+https://github.com/mynameisfiber/secret-sharing.git>=0.2.
